fixed footer too high on page

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -12,7 +12,7 @@ body {
 
 .page-container {
   position: relative;
-  min-height: 100%;
+  min-height: 100vh;
   padding-bottom: 100px;
 }
 
@@ -407,10 +407,7 @@ btn-open:active {
 .footer {
   background: #3232cd;
   min-height: 75px;
-  margin-top: 20px;
   width: 100%;
-  position: absolute;
-  bottom: 0;
 }
 
 .footer-contact-container {
@@ -537,9 +534,7 @@ btn-open:active {
 }
 
 .lg-btn-container {
-  position: absolute;
   height: 18px;
-  bottom: 75px;
 }
 
 /* All Games Container */
@@ -1325,9 +1320,6 @@ btn-open:active {
   .game-container-all-games {
     width: 90%;
     margin: 10px 5%;
-  }
-  .page-container {
-    padding-bottom: 150px;
   }
 }
 
